flex-wrap fixed

--- a/Bus_website/saas/style.scss
+++ b/Bus_website/saas/style.scss
@@ -58,8 +58,7 @@ html{
     scroll-behavior: smooth;
 }
 .wrapper{
-    width: 100%;
-    height: 100vh;
+    min-height: 100vh;
 }
 a{
     text-decoration: none;
